--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "arrowParens": "avoid",
+  "trailingComma": "all",
+  "printWidth": 100,
+  "proseWrap": "always",
+  "endOfLine": "lf"
 }
