--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
+    "nestjs-config": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.37",
+    "typeorm-model-generator": "^0.4.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.3",
