--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "moment-timezone": "^0.5.34",
     "nestjs-config": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.37",
-    "typeorm-model-generator": "^0.4.5"
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.3",
@@ -58,6 +59,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "typeorm-model-generator": "^0.4.6",
     "typescript": "^4.3.5"
   },
   "jest": {
