--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 
     /* 추가적인 확인 */
     "noUnusedLocals": false /* 사용되지 않은 지역 변수에 대한 에러보고 여부 */,
-    "noUnusedParameters": true /* 사용되지 않은 파라미터에 대한 에러보고 여부 */,
+    "noUnusedParameters": false /* 사용되지 않은 파라미터에 대한 에러보고 여부 */,
     "noImplicitReturns": true /* 함수에서 코드의 모든 경로가 값을 반환하지 않을 시 에러보고 여부 */,
     "noFallthroughCasesInSwitch": false /* switch문에서 fallthrough 케이스에 대한 에러보고 여부 */,
 
