--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm_backup": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/orm/ormconfig.ts",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js --config src/config/orm/ormconfig.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/orm/ormconfig.ts",
     "typeorm:create-mig": "npm run typeorm migration:create -- -n",
     "typeorm:status-mig": "npm run typeorm migration:show",
     "typeorm:run-mig": "npm run typeorm migration:run",
